--- a/www.resounding.ca/Views/Home/Index.cshtml
+++ b/www.resounding.ca/Views/Home/Index.cshtml
@@ -2,5 +2,10 @@
     ViewBag.Title = "Resounding Software Homepage";
 }
 
-<h1>Home at Last!</h1>
+<article>
+<h1>Resounding Software: Home at Last</h1>
+</article>
 
+<article>
+<h2>We build Resounding Success!</h2>
+</article>
