--- a/www.resounding.ca/Views/Shared/_Layout.cshtml
+++ b/www.resounding.ca/Views/Shared/_Layout.cshtml
@@ -8,6 +8,12 @@
 <html class="no-js" lang="en">
 <!--<![endif]-->
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="Website for Resounding Software. We build resounding success." />
+    <meta name="keywords" content="Software Development,Resounding Software" />
+    <meta name="viewport" content="width=device-width">
+
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/style.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/site.css")" rel="stylesheet" type="text/css" />
