added tournaments tour, revamped homepage

--- a/www.resounding.ca/Views/Home/Index.cshtml
+++ b/www.resounding.ca/Views/Home/Index.cshtml
@@ -2,10 +2,47 @@
     ViewBag.Title = "Resounding Software Homepage";
 }
 
-<article>
-<h1>Resounding Software: Home at Last</h1>
+<header>
+<img src="@Url.Content("~/Content/img/box.png")" alt="Resounding Software" />
+<h1>Resounding Software</h1>
+<h2>We build Resounding Success!</h2>
+<p>Resounding Software builds products to help small and medium business
+improve productivity, be more efficient, and achieve <strong>resounding success</strong>.</p>
+<p><a href="#works">What's a software developer good for, anyway?</a></p>
+</header>
+
+<article id="works">
+<img src="@Url.Content("~/Content/img/gears.png")" alt="We know how these things work" />
+<h1>We know how these things work</h1>
+<p>Databases, web servers, mobile apps... As a business owner, you maybe don't know where to start with all these
+things. As Developers, this is what we do. We know how these things work, and we know how to make them work,
+so that you and your business can be more productive.</p>
+<p><a href="#productivity">What kinds of things can we do for you?</a></p>
 </article>
 
-<article>
-<h2>We build Resounding Success!</h2>
+<article id="productivity">
+<img src="@Url.Content("~/Content/img/meeting.png")" alt="Productivity Enhancements" />
+<h1>Productivity Enhancements</h1>
+<p></p>
+<p><a href="#integration">Next: Integration with existing systems</a></p>
+</article>
+
+<article id="integration">
+<img src="@Url.Content("~/Content/img/integration.png")" alt="Data Visibility" />
+<h1>Existing Systems</h1>
+<p></p>
+<p><a href="#reporting">Get access to your data</a></p>
+</article>
+
+<article id="reporting">
+<img src="@Url.Content("~/Content/img/data.png")" alt="Data Visibility" />
+<h1>Data Visibility</h1>
+<p></p>
+<p><a href="#contact">Contact Us</a></p>
+</article>
+
+<article id="contact">
+<img src="@Url.Content("~/Content/img/email.png")" alt="Contact Us" />
+<h1>Contact Us</h1>
+<p>Why not drop us a line at <a href="mailto:support@resounding.ca">support@resounding.ca</a></p>
 </article>
