--- a/www.resounding.ca/Views/Shared/_Layout.cshtml
+++ b/www.resounding.ca/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="Website for Resounding Software. We build resounding success." />
     <meta name="keywords" content="Software Development,Resounding Software" />
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/style.css")" rel="stylesheet" type="text/css" />
