permissions & ui changes

--- a/www.resounding.ca/Areas/Tournaments/Views/Tournaments/Teams.cshtml
+++ b/www.resounding.ca/Areas/Tournaments/Views/Tournaments/Teams.cshtml
@@ -63,6 +63,14 @@
                     @team.Name
                     <span class="caret" style="visibility: hidden;"></span>
                 </a>
+                <div class="info">
+                    <div>
+                        Coach: <strong>@team.Coach.Name</strong>
+                    </div>
+                    <div>
+                        Home Field: <strong>@team.HomeField</strong>
+                    </div>
+                </div>
             </div>
         }
         </div>
