--- a/www.resounding.ca/Content/js/Teams/templates/teamViews.html
+++ b/www.resounding.ca/Content/js/Teams/templates/teamViews.html
@@ -49,70 +49,79 @@
     </div>
 
     <div id="player-detail">
-        <div class="row-fluid">
-            <div class="span12 edit">
-                <div class="navbar">
-                    <div class="navbar-inner">
-                        <div class="btn-group">
-                            <a class="btn btn-mini btn-primary" href="#Tournaments/Players/{{= Id }}/edit">Edit</a>
-                            <a class="btn btn-mini btn-danger delete">Delete</a>
-                        </div>
-                    </div>
+        <div class="navbar">
+            <div class="navbar-inner">
+                <div class="btn-group">
+                    <a class="btn btn-mini btn-primary" href="#Tournaments/Players/{{= Id }}/edit">Edit</a>
+                    <a class="btn btn-mini btn-danger delete">Delete</a>
                 </div>
             </div>
         </div>
-        <div class="row-fluid">            
-            <form class="form-horizontal">
-                <div class="control-group">
-                    <label class="control-label">Name: </label>
-                    <label class="control-label content">{{= Name }}</label>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">Number: </label>
-                    <label class="control-label content">{{= Number }}</label>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">Position: </label>
-                    <label class="control-label content">{{= Position }}</label>
-                </div>                
-            </form>
-        </div>
+        <form class="form-horizontal">
+            <div class="control-group">
+                <span><i class="icon icon-user"></i> {{= Name }}</span>
+            </div>
+            <div class="control-group">
+                <span><i class="icon">#</i> {{= Number }}</span>
+            </div>
+            <div class="control-group">
+                <span><i class="icon icon-map-marker"></i> {{= Position }}</span>
+            </div>
+            <div class="control-group">
+                <span><i class="icon icon-envelope"></i> <a href="mailto:{{= Email }}">{{= Email }}</a></span>
+            </div>
+            <div class="control-group">
+                <span><i class="icon icon-bell"></i> {{= PhoneNumber }}</span>
+            </div>
+        </form>
     </div>
 
     <div id="player-edit">
-        <div class="row-fluid">
-            <div class="span12">
-                <div class="navbar">
-                    <div class="navbar-inner">
-                        <div class="btn-group">
-                            <a class="btn btn-mini btn-primary save">Save</a>
-                            <a class="btn btn-mini" href="#Tournaments/Players/{{= Id }}">Cancel</a>
-                        </div>
-                    </div>
+        <div class="navbar">
+            <div class="navbar-inner">
+                <div class="btn-group">
+                    <a class="btn btn-mini btn-primary save">Save</a>
+                    <a class="btn btn-mini" href="#Tournaments/Players/{{= Id }}">Cancel</a>
                 </div>
             </div>
         </div>
-        <div class="row-fluid">            
-            <form class="form-horizontal">
-                <div class="control-group">
-                    <label class="control-label">Name: </label>
+        <form class="form-horizontal">
+            <div class="control-group">
+                <div class="input-prepend">
+                    <span class="add-on"><i class="icon icon-user"></i> </span>
                     <input type="text" placeholder="Name" name="name" value="{{= Name }}" />
                 </div>
-                <div class="control-group">
-                    <label class="control-label">Number: </label>
-                    <input type="text" placeholder="Number" name="number" value="{{= Number }}" />
+            </div>
+            <div class="control-group">
+                <div class="input-prepend">
+                    <span class="add-on">#</span>
+                    <input type="text" placeholder="Number" name="number" value="{{= Number }}" class="input-mini" />
                 </div>
-                <div class="control-group">
-                    <label class="control-label">Position: </label>
-                    <select name="position">
+            </div>
+            <div class="control-group">
+                <div class="input-prepend">
+                    <span class="add-on"><i class="icon icon-map-marker"></i> </span>
+                    <select name="position" class="input-medium">
                         <option value="Goalkeeper">Goalkeeper</option>
                         <option value="Midfielder">Midfielder</option>
                         <option value="Forward">Forward</option>
                         <option value="Defense">Defense</option>
                         <option value="Striker">Striker</option>
                     </select>
-                </div>                
-            </form>
-        </div>
+                </div>
+            </div>
+            <div class="control-group">
+                <div class="input-prepend">
+                    <span class="add-on"><i class="icon icon-envelope"></i> </span>
+                    <input type="text" placeholder="Email Address" name="email" value="{{= Email }}" class="input-medium" />
+                </div>
+            </div>
+            <div class="control-group">
+                <div class="input-prepend">
+                    <span class="add-on"><i class="icon icon-bell"></i> </span>
+                    <input type="text" placeholder="Phone Number" name="phone" value="{{= PhoneNumber }}" class="input-medium" />
+                </div>
+            </div>
+        </form>
     </div>
 </div>
