update & reset database

--- a/www.resounding.ca/Areas/Tournaments/Views/Tournaments/Teams.cshtml
+++ b/www.resounding.ca/Areas/Tournaments/Views/Tournaments/Teams.cshtml
@@ -45,7 +45,8 @@
         </div>
 
         <div id="roles" class="navbar">
-            <div class="navbar-inner">                
+            <div class="navbar-inner">
+                <button type="button" class="btn btn-danger pull-right">Reset Data</button>
                 <div class="btn-group pull-right" data-toggle="buttons-radio">
                     <a class="brand">Role</a>
                     <button type="button" class="btn active" data-role="public" data-target="#public-explanation">Public</button>
