--- a/www.resounding.ca/Areas/Tournaments/Views/Tournaments/Teams.cshtml
+++ b/www.resounding.ca/Areas/Tournaments/Views/Tournaments/Teams.cshtml
@@ -46,18 +46,46 @@
 
         <div id="roles" class="navbar">
             <div class="navbar-inner">
-                <button type="button" class="btn btn-danger pull-right">Reset Data</button>
-                <div class="btn-group pull-right" data-toggle="buttons-radio">
-                    <a class="brand">Role</a>
-                    <button type="button" class="btn active" data-role="public" data-target="#public-explanation">Public</button>
-                    <button type="button" class="btn" data-role="player" data-target="#player-explanation">Player</button>
-                    <button type="button" class="btn" data-role="coach" data-target="#coach-explanation">Coach</button>
-                    <button type="button" class="btn" data-role="convenor" data-target="#convenor-explanation">Convenor</button>
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a class="brand">Role</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav nav-pills pull-right">
+                        <li class="active">
+                            <a href="#" data-role="public" data-target="#public-explanation">Public</a>
+                        </li>
+                        <li>
+                            <a href="#" data-role="player" data-target="#player-explanation">Player</a>
+                        </li>
+                        <li>
+                            <a href="#" data-role="coach" data-target="#coach-explanation">Coach</a>
+                        </li>
+                        <li>
+                            <a href="#" data-role="convenor" data-target="#convenor-explanation">Convenor</a>
+                        </li>
+                        <li class="divider">
+
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                More
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <button type="button" class="btn btn-danger btn-block">Reset Data</button>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
 
-        <div class="row">
+        <div id="messages" class="row">
             <div id="public-explanation" class="alert offset6 span6 fade in">
                 <button type="button" class="close" data-dismiss="alert">×</button>
                 When the <strong>Public</strong>
@@ -82,10 +110,7 @@
         <div id="teams">            
         @foreach (var team in Model.Teams) {
             <div id="team-@team.Id" class="row-fluid">
-                <a class="team" href="Tournaments/Teams/@team.Id">
-                    @team.Name
-                    <span class="caret" style="visibility: hidden;"></span>
-                </a>
+                <h1>@team.Name</h1>
                 <div class="info">
                     <div>
                         Home Field: <strong>@team.HomeField</strong>
