Fix responsive display of player details

--- a/www.resounding.ca/Content/css/tournament.css
+++ b/www.resounding.ca/Content/css/tournament.css
@@ -37,3 +37,10 @@
     .container.player .control-group {
         padding-left: 25px;
     }
+
+@media (max-width: 767px) {
+    .players {
+        width: 100%;
+        margin-left: auto;
+    }
+}
