--- a/www.resounding.ca/Areas/Tournaments/Views/Schedule/Index.cshtml
+++ b/www.resounding.ca/Areas/Tournaments/Views/Schedule/Index.cshtml
@@ -46,45 +46,46 @@
             </div>
 
             <div id="filter" class="navbar">
-            <div class="navbar-inner">
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a>
-                <a class="brand">Game Filter</a>
-                <div class="nav-collapse collapse">
-                    <ul class="nav nav-pills">
-                        <li class="active">
-                            <a href="#">List</a>
-                        </li>
-                        <li>
-                            <a href="#">Day</a>
-                        </li>
-                        <li>
-                            <a href="#">Week</a>
-                        </li>
-                        <li>
-                            <a href="#">Month</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                @Model.TeamFilter
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    @foreach (var team in Model.Teams) {
-                                        <a href="/Tournaments/Schedule?team=@team.Id">@team.Name</a>
-                                    }
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
+                <div class="navbar-inner">
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </a>
+                    <a class="brand">Game Filter</a>
+                    <div class="nav-collapse collapse">
+                        <ul class="nav nav-pills">
+                            <li class="active">
+                                <a href="#">List</a>
+                            </li>
+                            <li>
+                                <a href="#">Day</a>
+                            </li>
+                            <li>
+                                <a href="#">Week</a>
+                            </li>
+                            <li>
+                                <a href="#">Month</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    @Model.TeamFilter
+                                    <b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#Tournaments/Schedule/Team/all">All Teams</a>
+                                        @foreach (var team in Model.Teams) {
+                                            <a href="#Tournaments/Schedule/Team/@team.Id">@team.Name</a>
+                                        }
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
 
             <div id="main"></div>
         </div>
