--- a/www.resounding.ca/Areas/Tournaments/Views/Teams/Index.cshtml
+++ b/www.resounding.ca/Areas/Tournaments/Views/Teams/Index.cshtml
@@ -51,9 +51,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand">Role</a>
                 <div class="nav-collapse collapse">
-                    <ul class="nav nav-pills pull-right">
+                    <ul class="nav nav-pills">
+                        <li>
+                            <p class="navbar-text">View as</p>
+                        </li>
+                        <li class="divider-vertical"></li>
                         <li class="active">
                             <a href="#" data-role="public" data-target="#public-explanation">Public</a>
                         </li>
@@ -66,9 +69,8 @@
                         <li>
                             <a href="#" data-role="convenor" data-target="#convenor-explanation">Convenor</a>
                         </li>
-                        <li class="divider">
-
-                        </li>
+                    </ul>
+                    <ul class="nav pull-right">
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 More
